# raft

./: .gitignore  LICENSE.md  README.md
raft/: raft.cabal
raft/src/: Main.hs
