name:                raft
version:             0.1.0.0
synopsis:            Toy implementation of Raft fault-tolerant consensus algorithm
description:         Please see README.md
homepage:            https://github.com/githubuser/raft#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Collins <nathan.collins@gmail.com>
maintainer:          Nathan Collins <nathan.collins@gmail.com>
copyright:           2016 Nathan Collins
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable raft
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , random
                     , safe-exceptions
